force-app/main/default/objects/sugati__Travel_App_Sync__c/sugati__Travel_App_Sync__c.object-meta.xml
<CustomObject>
    <label>Travel App Sync</label>
    <nameField>
        <label>Travel App Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Apps Sync</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>