force-app/main/default/objects/sugati__Travel_App_Sync__c/fields/sugati__TAS_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAS_Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>