force-app/main/default/objects/sugati__Travel_App_Sync__c/fields/sugati__TAS_Link_To_Travel_App__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAS_Link_To_Travel_App__c</fullName>
    <formula>IF(
	ISPICKVAL(sugati__TAS_Travel_App__c, &apos;Vamoos&apos;),
	HYPERLINK(sugati__TAS_Travel_App_Link__c, &apos;Review on Vamoos&apos;,&apos;_blank&apos;),
	IF(
		ISPICKVAL(sugati__TAS_Travel_App__c, &apos;Axus&apos;),
		HYPERLINK(sugati__TAS_Travel_App_Link__c, &apos;Review on Axus&apos;,&apos;_blank&apos;),
		&apos;&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Travel App</label>
    <type>Text</type>
</CustomField>