force-app/main/default/objects/sugati__Travel_App_Sync__c/fields/sugati__TAS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAS_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Travel Apps Sync</relationshipLabel>
    <relationshipName>Travel_Apps_Sync</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>