force-app/main/default/objects/sugati__Travel_App_Sync__c/fields/sugati__TAS_Passcode__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAS_Passcode__c</fullName>
    <label>Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>