force-app/main/default/objects/sugati__Travel_App_Sync__c/fields/sugati__TAS_Travel_App__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAS_Travel_App__c</fullName>
    <label>Travel App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Axus</fullName>
            </value>
            <value>
                <fullName>Vamoos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>