force-app/main/default/objects/sugati__Travel_App_Sync__c/fields/sugati__TAS_Travel_App_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAS_Travel_App_Id__c</fullName>
    <externalId>true</externalId>
    <label>Travel App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>