force-app/main/default/objects/sugati__Travel_App_Sync__c/fields/sugati__TAS_Travel_App_Link__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAS_Travel_App_Link__c</fullName>
    <formula>IF(
    ISPICKVAL(sugati__TAS_Travel_App__c, &apos;Vamoos&apos;),
    IF(
        ISBLANK(sugati__TAS_Travel_App_Id__c),  
        &apos;&apos;,
        $Setup.sugati__Vamoos_Setting__c.sugati__Vamoos_URL__c + $Setup.sugati__Vamoos_Setting__c.sugati__Ref_Code__c + &apos;/&apos; + sugati__TAS_Passcode__c + &apos;/edit&apos;
    ),
    IF(
        ISBLANK(sugati__TAS_Travel_App_Id__c),
        &apos;&apos;,
        &apos;https://axustravelapp.com/admin/itinerary/&apos; + sugati__TAS_Travel_App_Id__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel App Link</label>
    <type>Text</type>
</CustomField>